# coldpad

./: .gitignore  Cargo.toml  LICENSE  README.md
coldpad/: Cargo.toml
coldpad-core/: Cargo.toml
coldpad-core/src/: hash.rs  lib.rs  wrap.rs
coldpad/src/: cli.rs  encoding.rs  io.rs  key.rs  main.rs  output.rs  prompt.rs  terminal.rs
coldpad/src/commands/: decrypt.rs  encrypt.rs  info.rs  key.rs  mod.rs  secure.rs
coldpad/tests/: cli.rs
